src/styles/layout-overide.css
* {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background: #f5f5f5;
  color: black;
}
html {
  height: 100%;
}
body {
  height: 100%;
  border: 5px solid #ed0968;
}
h1 {
  font-size: 1.5rem;
  line-height: 0.5rem;
}
p, div {
  font-size: 16px;
}

